# undraw

./: LICENSE  README.md
.github/workflows/: ci.yml  publish-cargo.yml  publish-npm.yml  publish-pypi.yml  publish.yml
core-rs/: Cargo.toml  README.md
core-rs/src/: inventory.rs  main.rs
core-rs/tests/: cli_json.rs
scripts/: agent-contract-check.mjs
skill/: README.md  SKILL.md
wrapper-js/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts
wrapper-js/.github/: PULL_REQUEST_TEMPLATE.md
wrapper-js/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
wrapper-js/.github/workflows/: ci.yml  sync.yml
wrapper-js/docs/: index.md  report.md  roadmap.md
wrapper-js/src/: index.ts  inventory-data.ts
wrapper-js/tests/: cli.test.ts
wrapper-py/: README.md  pyproject.toml
wrapper-py/src/undraw/: cli.py  inventory.py
wrapper-py/tests/: test_cli.py  test_inventory.py
