[package]
name = "undraw"
version = "0.1.0"
edition = "2021"
authors = ["stefdevscore"]
description = "A minimalist CLI for unDraw illustrations"
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ureq = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
base64 = "0.21"
colored = "2.1"
indicatif = "0.17"
regex = "1.10"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to improve optimization
panic = "abort"     # Strip panic strings
strip = true        # Strip symbols from binary
